<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Add</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_result">DisplayResult</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="title_activity_home_uti">HomeUti</string>
    <string name="title_activity_education">Education</string>
    <string name="title_activity_entertainment">Entertainment</string>
    <string name="edu">Education and Health Details</string>
    <string name="entertainment_">Entertainment></string>
    <string name="calculate">Calculate</string>
    <string name="display">Display</string>
    <string name="sports_music">Sports/Music</string>
    <string name="scholarships">Scholarships</string>
    <string name="doctor">Doctor</string>
    <string name="press">Press Calculate to get the result</string>
    <string name="home_utilities">Home/Utilities</string>
    <string name="edu_health_">Edu_Health></string>
    <string name="electricity">Electricity</string>
    <string name="maintenance">Maintenance</string>
    <string name="internet">Internet</string>
    <string name="movies">Movies</string>
    <string name="entertainment">Entertainment</string>
    <string name="parties">Parties</string>
    <string name="holidays">Holidays</string>
    <string name="homepay">Homepay</string>
    <string name="bonus">Bonus</string>
    <string name="savings">Savings</string>
    <string name="income">Income</string>
    <string name="shopping">Shopping</string>
    <string name="shopping_details">Shopping Details</string>
    <string name="others">Others</string>
    <string name="food">Food</string>
    <string name="clothes">Clothes</string>
    <string name="total_home_utilities">TOTAL HOME</string>
    <string name="total_entertainment">TOTAL ENTERTAINMENT</string>
    <string name="total_income">TOTAL INCOME</string>
    <string name="total_shopping">TOTAL SHOPPING</string>
    <string name="income_expense_">INCOME - EXPENSE \t=</string>
    <string name="total_education_health">TOTAL EDUCATION</string>
    <string name="income_expense">INCOME-EXPENSE</string>
    <string name="get_notifications">Get Notifications</string>
    <string name="optimize_expense">Optimize Expense</string>

</resources>