<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/amount3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amount2"
        android:layout_below="@+id/amount2"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/savings"
        android:inputType="number" />

    <Button
        android:id="@+id/disre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/display" />
    <Button
        android:id="@+id/newact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/shopping" />
     <EditText
         android:id="@+id/tt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/disre"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="36dp"
         android:ems="10"
         android:hint="@string/press" />

     <EditText
         android:id="@+id/amount1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/newact"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/homepay"
         android:inputType="number" >

         <requestFocus />
     </EditText>

     <EditText
         android:id="@+id/amount2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/amount1"
         android:layout_below="@+id/amount1"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/bonus"
         android:inputType="number" />

     <Button
         android:id="@+id/calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/tt"
         android:text="@string/calculate" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/newact"
         android:layout_alignBottom="@+id/newact"
         android:layout_toLeftOf="@+id/tt"
         android:text="@string/income"
         android:textSize="22sp" />

</RelativeLayout>